k8s-resources/v2/project-dev/cluster-gke-dev/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    shared-gateway-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: metabase
  labels:
    shared-gateway-access: "true"
